--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Style -->
+  <link rel="stylesheet" href="./src/style.css">
   <title>GitHub Friends</title>
 </head>
 
 <body>
 
-  <script src="/src/main.js"></script>
+  <script src="./src/main.js"></script>
 </body>
 
 </html>
