--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <body>
 
   <div class="container">
+    <!-- Title and Logo Section -->
+
+    <figure class="text-center pt-2 mb-2">
+      <i class="fa-brands fa-github fa-9x"></i>
+      <h1 class="pt-2">Search Your Friend in <strong id="github-name">GitHub</strong></h1>
+    </figure>
+
 
   </div>
 
