add input section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
       <h1 class="pt-2">Search Your Friend in <strong id="github-name">GitHub</strong></h1>
     </figure>
 
+    <!-- Input Section  -->
 
+    <section id="search-box" class="text-center pt-2">
+      <label for="saerch-bar">Search your friends:</label>
+      <input id="search-bar" type="text">
+    </section>
   </div>
 
   <script src="./src/main.js"></script>
