--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
   <!-- Style -->
-  <link rel="stylesheet" href="./src/style.css">
+  <link rel="stylesheet" href="./src/css/style.css">
   <title>GitHub Friends</title>
 </head>
 
@@ -35,7 +35,7 @@
     </section>
   </div>
 
-  <script src="./src/main.js"></script>
+  <script src="./src/js/main.js"></script>
 </body>
 
 </html>
