--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
     <!-- Input Section  -->
 
     <section id="search-box" class="text-center pt-2">
-      <label for="saerch-bar">Search your friends:</label>
-      <input id="search-bar" type="text">
+      <form action="index.html" method="GET">
+        <label for="saerch-bar">Search your friends:</label>
+        <input id="search-bar" type="text">
+        <button type="submit">Cerca</button>
+      </form>
     </section>
   </div>
 
