--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       <form action="index.html" method="GET">
         <label for="saerch-bar">Search your friends:</label>
         <input id="search-bar" type="text">
-        <button type="submit">Cerca</button>
+        <button type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </button>
       </form>
     </section>
   </div>
