--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Title and Logo Section -->
 
     <figure class="text-center pt-2 mb-2">
-      <i class="fa-brands fa-github fa-9x"></i>
+      <img src="./public/github.png" alt="github-logo">
       <h1 class="pt-2">Search Your Friend in <strong id="github-name">GitHub</strong></h1>
     </figure>
 
