--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Input Section  -->
 
-    <section id="search-box" class="text-center pt-2">
+    <section class="box text-center pt-2">
       <form action="index.html" method="GET">
         <label for="saerch-bar">Search your friends:</label>
         <input id="search-bar" type="text">
@@ -38,6 +38,9 @@
         </button>
       </form>
     </section>
+
+    <!-- Output Section -->
+    <section class="box"></section>
   </div>
 
   <script src="./src/js/main.js"></script>
