--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </section>
 
     <!-- Output Section -->
-    <section class="box"></section>
+    <section class="box">\
+      <!-- Inserire Contenuto API -->
+    </section>
   </div>
 
   <script src="./src/js/main.js"></script>
