modified link of img in public folder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Title and Logo Section -->
 
     <figure class="text-center pt-2 mb-2">
-      <img src="./public/github.png" alt="github-logo" class="rotation">
+      <img src="./github.png" alt="github-logo" class="rotation">
       <h1 class="pt-2">Search Your Friend in <strong id="github-name">GitHub</strong></h1>
     </figure>
 
