started with api call

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <!-- Input Section  -->
 
     <section class="box text-center pt-2">
-      <form action="index.html" method="GET">
+      <form id="search-form" action="index.html" method="GET">
         <label for="saerch-bar">Search your friends:</label>
         <input id="search-bar" type="text">
-        <button type="submit">
+        <button type="submit" id="search-button">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </form>
@@ -45,7 +45,7 @@
     </section>
   </div>
 
-  <script src="./src/js/main.js"></script>
+  <script src="./src/js/main.js" defer></script>
 </body>
 
 </html>
