--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
   </div>
 
-  <script src="./src/js/main.js" defer></script>
+  <script src="./src/js/main.js" type="module"></script>
 </body>
 
 </html>
