--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <!-- Output Section -->
-    <section class="box" id="result">
+    <section class="box d-none" id="result">
       <!-- Inserire Contenuto API -->
     </section>
   </div>
