--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="box text-center pt-2">
       <form id="search-form" action="index.html" method="GET">
         <label for="saerch-bar">Search your friends:</label>
-        <input id="search-bar" type="text">
+        <input id="search-bar" type="text" placeholder="Insert the user name">
         <button type="submit" id="search-button">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
