add style for button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <label for="saerch-bar">Search your friends:</label>
         <input id="search-bar" type="text" placeholder="Insert the user name">
         <button type="submit" id="search-button">
-          <i class="fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-magnifying-glass" style="color: blueviolet;"></i>
         </button>
       </form>
     </section>
